--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port = 8081
 
+########### Data base
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username= jaimeluismoralesguzman
 spring.datasource.password= ''
