--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,13 @@ repositories {
 }
 
 dependencies {
+
 	// Spring
+	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	implementation 'org.springframework.boot:spring-boot-starter'
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
 	// Data base
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
