--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ dependencies {
 	// Data base
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
 
+	// Documentation
+	compile 'io.springfox:springfox-swagger2:2.9.2'
+	compile 'io.springfox:springfox-swagger-ui:2.9.2'
+	compile 'org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE'
+
 	// Utils
 	compileOnly 'org.projectlombok:lombok:1.18.14'
 	annotationProcessor 'org.projectlombok:lombok:1.18.14'
