--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	// Utils
 	compileOnly 'org.projectlombok:lombok:1.18.14'
 	annotationProcessor 'org.projectlombok:lombok:1.18.14'
+	compile 'com.google.guava:guava:27.0-jre'
 
 	// Test
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
