Unit tests added

--- a/build.gradle
+++ b/build.gradle
@@ -38,8 +38,10 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testImplementation 'junit:junit:4.12'
 	testCompileOnly 'org.projectlombok:lombok:1.18.14'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.14'
+	testCompile 'org.assertj:assertj-core:3.6.1'
 
 }
 
