--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.username= jaimeluismoralesguzman
 spring.datasource.password= ''
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
+
+########### Feign
+feign.openLibrary.name= OPEN-LIBRARY
+feign.openLibrary.rootUrl= https://openlibrary.org/api
+feign.openLibrary.resources.books= /books
