--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,12 @@ plugins {
 	id 'org.springframework.boot' version '2.3.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
+	id 'net.ltgt.apt' version '0.15'
+	id 'application'
 }
+
+apply plugin: 'idea'
+apply plugin: "net.ltgt.apt"
 
 group = 'wolox'
 version = '0.0.1-SNAPSHOT'
@@ -12,9 +17,19 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('springCloudVersion', "Hoxton.SR8")
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
 dependencies {
 
-	// Spring
+	// ------------ Spring
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	implementation 'org.springframework.boot:spring-boot-starter'
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -22,20 +37,25 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
-	// Data base
+	// ------------ Spring Cloud
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	// ------------ Data base
 	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
 
-	// Documentation
+	// ------------ Documentation
 	compile 'io.springfox:springfox-swagger2:2.9.2'
 	compile 'io.springfox:springfox-swagger-ui:2.9.2'
 	compile 'org.springframework.plugin:spring-plugin-core:1.2.0.RELEASE'
 
-	// Utils
+	// ------------ Utils
 	compileOnly 'org.projectlombok:lombok:1.18.14'
 	annotationProcessor 'org.projectlombok:lombok:1.18.14'
 	compile 'com.google.guava:guava:27.0-jre'
+	implementation "org.mapstruct:mapstruct-jdk8:1.3.0.Final"
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.3.0.Final"
 
-	// Test
+	// ------------ Test
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
@@ -43,7 +63,22 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.14'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.14'
 	testCompile 'org.assertj:assertj-core:3.6.1'
+	testImplementation 'net.jodah:concurrentunit:0.4.6'
 
+}
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+	developmentOnly
+	runtimeClasspath {
+		extendsFrom developmentOnly
+	}
+}
+
+sourceSets {
+	main.java.srcDirs += "build/generated/source/apt/main"
 }
 
 test {
