--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.14'
 	testCompile 'org.assertj:assertj-core:3.6.1'
 	testImplementation 'net.jodah:concurrentunit:0.4.6'
+	testImplementation 'uk.co.jemos.podam:podam:7.1.0.RELEASE'
 
 }
 
